# rust_ai_experiments

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
frontend/: Cargo.toml  index.html  style.css
frontend/src/: api.rs  main.rs  models.rs  state.rs  ws.rs
frontend/src/components/: chat.rs  sidebar.rs
migrations/: 0001_initial.sql
src/: errors.rs  main.rs  models.rs
src/agent/: mod.rs
src/db/: conversation_repository.rs  message_repository.rs  mod.rs
src/routes/: api_routes.rs  chat_routes.rs  mod.rs  ws_routes.rs
src/service/: chat_service.rs
templates/: base.html  chat_panel.html  chat_response.html  error_fragment.html  index.html  message.html
