[workspace]
members = [".", "frontend"]

[package]
name = "rust_ai_experiments"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rust_ai_experiments"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "migrate",
] }
rig-core = "0.31.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
dotenvy = "0.15"
anyhow = "1"
futures-util = "0.3"
