[package]
name = "rust-ai-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.16", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "console",
    "BinaryType",
    "Window",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http", "json"] }
gloo-timers = "0.3"
log = "0.4"
console_log = "1"
